# etl-design

excel-parsing/excel-reader/: main.py  pyproject.toml
excel-parsing/excel-reader/scripts/: formula_parser_clients.sh
excel-parsing/excel-reader/src/: main.py
excel-parsing/excel-reader/src/core/: config.py
excel-parsing/excel-reader/src/services/: dtypes.py  get_data.py  main.py  utils.py
typechecking/backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
typechecking/backend/app/: README.md  initial_data.py  postgres_prestart.py
typechecking/backend/app/alembic/: env.py
typechecking/backend/app/api/: deps.py  main.py  utils.py
typechecking/backend/app/controllers/: schemas.py  users.py  utils.py  validation.py
typechecking/backend/app/core/: config.py  database_redis.py  database_sql.py  init_db.py  security.py
typechecking/backend/app/messaging/: connection.py  connection_factory.py  publishers.py
typechecking/backend/app/models/: __init__.py  user_info.py  user_roles.py
typechecking/backend/app/schemas/: __init__.py  api.py  controllers.py  messaging.py  models.py  services.py  token.py  users.py  workers.py
typechecking/backend/app/services/: file_processor.py  healthcheck.py
typechecking/backend/app/workers/: schema_workers.py  utils.py  validation_workers.py  worker_manager.py
typechecking/backend/scripts/: prestart_backend.sh
typechecking/backend/static/: acme__users__sample1.csv  acme__users__sample1.xls
typechecking/backend/tests/: testing_typechecking.ipynb  testing_typechecking.py
(+186 files in other folders)
