[project]
name = "excel-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "grpcio>=1.73.1",
    "grpcio-tools>=1.73.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
]
