[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "aio-pika>=9.5.5",
    "alembic>=1.16.2",
    "fastapi[standard]>=0.115.13",
    "ipykernel>=6.29.5",
    "jsonschema>=4.24.0",
    "jwt>=1.4.0",
    "matplotlib>=3.10.3",
    "motor>=3.7.1",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "passlib>=1.7.4",
    "pika>=1.3.2",
    "polars>=1.31.0",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.0",
    "pymongo>=4.13.2",
    "redis>=6.2.0",
    "ruff>=0.12.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "tenacity>=9.1.2",
]
